@@ -2,12 +2,13 @@ package harvestLog.service.impl;
 
 import harvestLog.dto.CategoryRequest;
 import harvestLog.dto.CategoryResponse;
+import harvestLog.exception.AlreadyExistsException;
 import harvestLog.model.Category;
 import harvestLog.model.Farmer;
 import harvestLog.repository.CategoryRepository;
 import harvestLog.repository.FarmerRepository;
 import harvestLog.service.ICategoryService;
-import org.springframework.data.domain.Sort;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -18,106 +19,114 @@ import java.util.stream.Collectors;
 @Service
 public class CategoryService implements ICategoryService {
 
-    private final CategoryRepository categoryRepository;
+    private final CategoryRepository repository;
     private final FarmerRepository farmerRepository;
 
-    public CategoryService(CategoryRepository categoryRepository, FarmerRepository farmerRepository) {
-        this.categoryRepository = categoryRepository;
+    public CategoryService(CategoryRepository repository, FarmerRepository farmerRepository) {
+        this.repository = repository;
         this.farmerRepository = farmerRepository;
     }
 
     @Override
-    public List<CategoryResponse> getAll(Long farmerId) {
-        return categoryRepository.findByFarmerId(farmerId, Sort.by("name")).stream()
+    public List<CategoryResponse> getAllForFarmerId(Long farmerId) {
+        return repository.findByFarmerId(farmerId, null).stream()
                 .map(this::toResponse)
                 .collect(Collectors.toList());
     }
 
     @Override
+    public List<CategoryResponse> getActiveForFarmerId(Long farmerId) {
+        return repository.findByFarmerIdAndActive(farmerId, true).stream()
+                .map(this::toResponse)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<CategoryResponse> getInactiveForFarmerId(Long farmerId) {
+        return repository.findByFarmerIdAndActive(farmerId, false).stream()
+                .map(this::toResponse)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<CategoryResponse> getAllForFarmerId(Long farmerId, Boolean active) {
+        if (active == null) {
+            return getAllForFarmerId(farmerId);
+        }
+        return active ? getActiveForFarmerId(farmerId) : getInactiveForFarmerId(farmerId);
+    }
+
+    @Override
     public Optional<CategoryResponse> getById(Long id, Long farmerId) {
-        return categoryRepository.findById(id)
-                .filter(cat -> cat.getFarmer().getId().equals(farmerId))
+        return repository.findById(id)
+                .filter(category -> category.getFarmer().getId().equals(farmerId))
                 .map(this::toResponse);
     }
 
     @Override
     @Transactional
     public CategoryResponse create(CategoryRequest request, Long farmerId) {
-        Category entity = toEntity(request, farmerId);
-        Category saved = categoryRepository.save(entity);
-        return toResponse(saved);
+        try {
+            Category category = toEntity(request, farmerId);
+            Category saved = repository.save(category);
+            return toResponse(saved);
+        } catch (DataIntegrityViolationException e) {
+            return handleDuplicateCategory(request, farmerId);
+        }
     }
 
-    @Transactional
-    @Override
-    public List<CategoryResponse> createBatch(List<CategoryRequest> requests, Long farmerId) {
-        if (requests == null || requests.isEmpty()) {
-            return List.of();
+    private CategoryResponse handleDuplicateCategory(CategoryRequest request, Long farmerId) {
+        Optional<Category> existing = repository.findByNameIgnoreCaseAndFarmerId(request.name().toUpperCase(), farmerId);
+
+        if (existing.isPresent() && !existing.get().isActive()) {
+            Category category = existing.get();
+            category.setActive(true);
+            return toResponse(repository.save(category));
         }
 
+        throw new AlreadyExistsException("Active category with name '" + request.name() + "' already exists");
+    }
+
+    @Override
+    @Transactional
+    public List<CategoryResponse> createBatch(List<CategoryRequest> requests, Long farmerId) {
         Farmer farmer = farmerRepository.findById(farmerId)
                 .orElseThrow(() -> new IllegalArgumentException("Farmer not found: " + farmerId));
 
-        List<Category> categoriesToSave = requests.stream()
-                .map(req -> {
-                    String name = req.name().toUpperCase().trim();
-                    if (name.isBlank()) {
-                        throw new IllegalArgumentException("Category name must not be empty");
-                    }
-
-                    // Check if it already exists
-                    Optional<Category> existing = categoryRepository.findByNameIgnoreCaseAndFarmerId(name, farmerId);
-                    if (existing.isPresent()) {
-                        Category cat = existing.get();
-                        if (!cat.isActive()) {
-                            cat.setActive(true);
-                            return categoryRepository.save(cat);
-                        } else {
-                            return cat;
-                        }
-                    }
-
-                    // Create new category
-                    Category newCategory = new Category();
-                    newCategory.setName(name);
-                    newCategory.setFarmer(farmer);
-                    newCategory.setActive(true);
-                    return newCategory;
+        List<Category> categories = requests.stream()
+                .map(request -> {
+                    Category category = new Category();
+                    category.setName(request.name().toUpperCase());
+                    category.setFarmer(farmer);
+                    category.setActive(request.active() != null ? request.active() : true);
+                    return category;
                 })
-                .toList();
+                .collect(Collectors.toList());
 
-        // Save all new categories
-        List<Category> savedCategories = categoryRepository.saveAll(categoriesToSave);
-
-        // Map to responses
-        return savedCategories.stream()
-                .map(this::toResponse)
-                .toList();
+        List<Category> saved = repository.saveAll(categories);
+        return saved.stream().map(this::toResponse).collect(Collectors.toList());
     }
-
 
     @Override
     @Transactional
     public Optional<CategoryResponse> update(Long id, CategoryRequest request, Long farmerId) {
-        return categoryRepository.findById(id)
-                .filter(cat -> cat.getFarmer().getId().equals(farmerId))
-                .map(cat -> {
-                    cat.setName(request.name().toUpperCase());
-                    Category updated = categoryRepository.save(cat);
-                    return toResponse(updated);
+        return repository.findById(id)
+                .filter(category -> category.getFarmer().getId().equals(farmerId))
+                .map(category -> {
+                    if (request.name() != null) {
+                        category.setName(request.name().toUpperCase());
+                    }
+                    if (request.active() != null) {
+                        category.setActive(request.active());
+                    }
+                    return toResponse(repository.save(category));
                 });
     }
 
     @Override
     @Transactional
     public boolean delete(Long id, Long farmerId) {
-        return categoryRepository.findById(id)
-                .filter(cat -> cat.getFarmer().getId().equals(farmerId))
-                .map(cat -> {
-                    categoryRepository.delete(cat);
-                    return true;
-                })
-                .orElse(false);
+        return repository.softDeleteByIdInAndFarmerId(List.of(id), farmerId) > 0;
     }
 
     @Override
@@ -126,13 +135,9 @@ public class CategoryService implements ICategoryService {
         if (ids == null || ids.isEmpty()) {
             return 0;
         }
-        return categoryRepository.deleteByIdInAndFarmerId(ids, farmerId);
+        return repository.softDeleteByIdInAndFarmerId(ids, farmerId);
     }
 
-    /**
-     * Internal domain method used by other services.
-     * Returns a Category entity (reactivating if needed) for the given farmer.
-     */
     @Override
     @Transactional
     public Category getOrCreateActiveByName(String name, Long farmerId) {
@@ -141,12 +146,12 @@ public class CategoryService implements ICategoryService {
             throw new IllegalArgumentException("Category name must not be empty");
         }
 
-        Optional<Category> existing = categoryRepository.findByNameIgnoreCaseAndFarmerId(normalized, farmerId);
+        Optional<Category> existing = repository.findByNameIgnoreCaseAndFarmerId(normalized, farmerId);
         if (existing.isPresent()) {
             Category cat = existing.get();
             if (!cat.isActive()) {
                 cat.setActive(true);
-                cat = categoryRepository.save(cat);
+                cat = repository.save(cat);
             }
             return cat;
         }
@@ -159,26 +164,25 @@ public class CategoryService implements ICategoryService {
         newCategory.setFarmer(farmer);
         newCategory.setActive(true);
 
-        return categoryRepository.save(newCategory);
+        return repository.save(newCategory);
     }
 
-    // ----------------------
-    // Mapping helpers
-    // ----------------------
     private Category toEntity(CategoryRequest request, Long farmerId) {
         Farmer farmer = farmerRepository.findById(farmerId)
                 .orElseThrow(() -> new IllegalArgumentException("Farmer not found: " + farmerId));
+
         Category category = new Category();
         category.setName(request.name().toUpperCase());
         category.setFarmer(farmer);
-        category.setActive(true);
+        category.setActive(request.active() != null ? request.active() : true);
         return category;
     }
 
     private CategoryResponse toResponse(Category category) {
         return new CategoryResponse(
                 category.getId(),
-                category.getName()
+                category.getName(),
+                category.isActive()
         );
     }
 }
